# clionTest

./: CMakeLists.txt  README.md  main.cpp  staticClazz.cpp  staticClazz.h
client/: app.cpp  app.h
server/: app.cpp  app.h
